Premiers tests de lecture de netcdf + creation fichier avec les fonctions de bases de netcdf

--- a/RaytracingCode/makefile
+++ b/RaytracingCode/makefile
@@ -10,6 +10,10 @@ OPTD = -g -Wall -Wtabs -Wunderflow -fimplicit-none -Wconversion -fdefault-intege
 #OPT = -implicitnone -i8 -r8 -prec-div -prec-sqrt -fast -O5
 #OPTD= -implicitnone -i8 -r8 -warn all -check all -fPIC -fpe0 -g -debug extended -traceback
 
+CDF_DIR = /usr
+INC_CDF = $(CDF_DIR)/include/
+LIB_CDF = $(CDF_DIR)/lib/x86_64-linux-gnu/
+
 all: module program clean
 
 debug: moduleD programD clean
@@ -31,17 +35,17 @@ module: #*.a
 
 	$(F90) -c $(OPT) constantes.f90
 	$(F90) -c $(OPT) coord.f90	
-	$(F90) -c $(OPT) environ.f90
+	$(F90) -c $(OPT) environ.f90 -I$(INC_CDF)
 	$(F90) -c $(OPT) subs_raytracing.f90
 	$(F90) -c $(OPT) RungeKuttaFehlberg.f90
 	$(F90) -c $(OPT) RungeKutta.f90
 	$(F90) -c $(OPT) params_raytracing.f90
 
-	ar -r biblio.a *.o
+	ar -r biblio.a *.o 
 
 program:
-	$(F90) -c $(OPT) raytracing_5.f90
-	$(F90) -o ARTEMIS-P raytracing_5.o biblio.a
+	$(F90) -c $(OPT) raytracing_5.f90 -I$(INC_CDF)
+	$(F90) -o ARTEMIS-P raytracing_5.o biblio.a -I$(INC_CDF) -L$(LIB_CDF) -lnetcdf -lnetcdff
 #*.o 
 programD:
 	$(F90) -c $(OPTD) raytracing_5.f90
